# transonic-aerodynamic-surrogate-modeling

./: .gitignore  DEPLOYMENT.md  LICENSE  Makefile  README.md  conftest.py  proposal_ml6140_adasu.tex  pyproject.toml  requirements.txt
report/: dasu_cs6140_transonic_surrogate.tex  final.tex  refs.bib
results/tables/: ablation_metrics.tex  heldout_metrics.tex  latency.tex  loao_metrics.tex  mach_extrap_metrics.tex  paper_comparison.tex  test_metrics.tex
scripts/: run_all.py
src/: analysis.py  config.py  data.py  eda.py  evaluate.py  train.py  viz.py
src/models/: dnn.py  polynomial.py  random_forest.py  xgboost_model.py
tests/: test_data.py  test_dnn.py  test_evaluate.py  test_polynomial.py  test_random_forest.py  test_xgboost.py
