[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transonic-surrogate"
version = "0.1.0"
description = "ML surrogate models for transonic airfoil aerodynamic coefficients."
authors = [{ name = "Ashish Dasu", email = "dasu.a@northeastern.edu" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
